examples/valid/comment.cp
# This is a comment
# This is also a comment

var myvar : integer is 7;
#var myvar : integer is 7;

var x is 0; # Inline comment