examples/invalid/comment1.cp
// This is a comment
var i is 0;
